laborations/lab1/test/bad/bad042.cc
int foo() {
	throw (if 2 then 3 else 4);
}
